Working on basics of landing page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
         rel="stylesheet"
         />
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -17,13 +21,27 @@
             </div>
             <nav>
                 <ul class = "nav-bar">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Resume</li>
-                    <li>Projects</li>
-                    <li>Contact Me!</li>
+                    <li><a class = "myLinks" href="about.html">Home</a></li>
+                    <li><a class = "myLinks" href="about.html">About</a></li>
+                    <li><a class = "myLinks" href="about.html">Resume</a></li>
                 </ul>
             </nav>
+
+            <div class=socials>
+                <a href="#" class="fa fa-linkedin"></a></li>
+                <a href="#" class="fa fa-github"></a>
+                <a href="#" class="fa fa-envelope"></a>
+            </div>
         </header>
+
+        <main>
+            <section class="presentation">
+                <div class="intro">
+                    <h1>Hi, I'm David Yoon</h1>
+                    <p>A software developer and storytelling enthusiast.</p>
+                    <p>Currently, I am in pursuit of the idea of "programming on the right side of the brain". </p>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
