Adding links to social media and making it so it opens in new tab

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </nav>
 
             <div class=socials>
-                <a href="#" class="fa fa-linkedin"></a></li>
-                <a href="#" class="fa fa-github"></a>
-                <a href="#" class="fa fa-envelope"></a>
+                <a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank" class="fa fa-linkedin"></a></li>
+                <a href="https://github.com/davio606" target="_blank" class="fa fa-github"></a>
+                <a href="mailto: djy6cg@virginia.edu" target="_blank" class="fa fa-envelope"></a>
             </div>
         </header>
 
