--- a/about.html
+++ b/about.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-    <h2>Hi I'm David</h2>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css"/>
+        <title>Home Page</title>
+        <link
+        href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
+        rel="stylesheet"
+        />
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+    <body>
+        <header>
+            <div class="logos">
+                <h4>By:David Yoon</h4>
+            </div>
+            <nav>
+                <ul class = "nav-bar">
+                    <li><a class = "myLinks" href="index.html">Home</a></li>
+                    <li><a class = "myLinks" href="about.html">About</a></li>
+                    <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
+                </ul>
+            </nav>
+
+            <div class=socials>
+                <a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank" class="fa fa-linkedin"></a></li>
+                <a href="https://github.com/davio606" target="_blank" class="fa fa-github"></a>
+                <a href="mailto: djy6cg@virginia.edu" target="_blank" class="fa fa-envelope"></a>
+            </div>
+        </header>
+
+        <main>
+            <section class="presentation">
+                <div class="intro">
+                    <h1>Hi, I'm David Yoon</h1>
+                    <p>A software developer and storytelling enthusiast.</p>
+                    <p>Currently, I am in pursuit of the idea of "programming on the right side of the brain". </p>
+                </div>
+                <div class="circle-here">
+                </div>
+                <div class="circle-orange">
+                </div>
+                <div class="circle-gray">
+                </div>
+                <!-- <img class ="circle" src ="./images/circle.png" alt =""/> -->
+            </section>
+        </main>
+
+
+    </body>
 </html>
