--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </div>
             <nav>
                 <ul class = "nav-bar">
-                    <li><a class = "myLinks" href="about.html">Home</a></li>
+                    <li><a class = "myLinks" href="index.html">Home</a></li>
                     <li><a class = "myLinks" href="about.html">About</a></li>
-                    <li><a class = "myLinks" href="about.html">Resume</a></li>
+                    <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
 
@@ -40,8 +40,20 @@
                     <h1>Hi, I'm David Yoon</h1>
                     <p>A software developer and storytelling enthusiast.</p>
                     <p>Currently, I am in pursuit of the idea of "programming on the right side of the brain". </p>
+                    <a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank" class="fa fa-linkedin"></a></li>
+                    <a href="https://github.com/davio606" target="_blank" class="fa fa-github"></a>
+                    <a href="mailto: djy6cg@virginia.edu" target="_blank" class="fa fa-envelope"></a>
                 </div>
+                <div class="circle-here">
+                </div>
+                <div class="circle-orange">
+                </div>
+                <div class="circle-gray">
+                </div>
+                <!-- <img class ="circle" src ="./images/circle.png" alt =""/> -->
             </section>
         </main>
+
+
     </body>
 </html>
