Animated Landing page + slash effect

--- a/about.html
+++ b/about.html
@@ -35,20 +35,23 @@
         </header>
 
         <main>
-            <section class="presentation">
-                <div class="intro">
-                    <h1>Hi, I'm David Yoon</h1>
-                    <p>A software developer and storytelling enthusiast.</p>
-                    <p>Currently, I am in pursuit of the idea of "programming on the right side of the brain". </p>
+            <section class="about-presentation">
+                <div class="about-intro">
+                    <h1>Hi, I'm David!</h1>
+                    <p>I love new things and I'm a dreamer. I enjoy meeting new people, solving new problems, and creating new challenges for myself. O </p>
                 </div>
-                <div class="circle-here">
-                </div>
-                <div class="circle-orange">
-                </div>
-                <div class="circle-gray">
+                <div class = "about-img">
+
                 </div>
                 <!-- <img class ="circle" src ="./images/circle.png" alt =""/> -->
             </section>
+
+            <div class="circle-here">
+            </div>
+            <div class="circle-orange">
+            </div>
+            <div class="circle-gray">
+            </div>
         </main>
 
 
