--- a/index.html
+++ b/index.html
@@ -22,38 +22,23 @@
             <nav>
                 <ul class = "nav-bar">
                     <li><a class = "myLinks" href="index.html">Home</a></li>
-                    <li><a class = "myLinks" href="about.html">About</a></li>
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
-
-            <div class=socials>
-                <a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank" class="fa fa-linkedin"></a></li>
-                <a href="https://github.com/davio606" target="_blank" class="fa fa-github"></a>
-                <a href="mailto: djy6cg@virginia.edu" target="_blank" class="fa fa-envelope"></a>
-            </div>
         </header>
-
         <main>
             <section class="presentation">
                 <div class="intro">
-                    <h1>Hi, I'm David Yoon</h1>
-                    <p>A software developer and storytelling enthusiast.</p>
-                    <p>Currently, I am in pursuit of the idea of "programming on the right side of the brain". </p>
-                    <a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank" class="fa fa-linkedin"></a></li>
-                    <a href="https://github.com/davio606" target="_blank" class="fa fa-github"></a>
-                    <a href="mailto: djy6cg@virginia.edu" target="_blank" class="fa fa-envelope"></a>
-                </div>
-                <div class="circle-here">
-                </div>
-                <div class="circle-orange">
-                </div>
-                <div class="circle-gray">
-                </div>
-                <!-- <img class ="circle" src ="./images/circle.png" alt =""/> -->
+                    <h1>Hi, I'm David Yoon.</h1>
+                    <p>I love new things and I'm a dreamer.</p>
+                    <p>Currently, I am playing with the idea of "programming on the right side of the brain". </p>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="https://github.com/davio606" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                        <li><a href="mailto: djy6cg@virginia.edu" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                    </ul>               
+                </div>  
             </section>
-        </main>
-
-
+        </main> 
     </body>
 </html>
