--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
         <!-- Add icon library -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            .slantedDivA{
+                position: relative;
+                width: 100%;
+                height: auto;
+                background: rgba(40, 40, 40, 1);
+                box-sizing: border-box;
+                padding: 30px;
+                color: #fff;
+                margin-bottom: 200px;
+                }
+    
+            .slantedDivA:after{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                content: '';
+                background: inherit;
+                z-index: -1;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                transform-origin: top left;
+                transform: skewY(4deg);
+                }
+        </style>
     </head>
     <body>
         <header>
