--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css"/>
-        <title>Home Page</title>
+        <title>David Yoon</title>
         <link
         href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
         rel="stylesheet"
@@ -44,7 +44,7 @@
     <body>
         <header>
             <div class="logos">
-                <h4>By:David Yoon</h4>
+                <h4>Work in Progress</h4>
             </div>
             <nav>
                 <ul class = "nav-bar">
