--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
+            <div class = >
+
+            </div>
         </header>
         <main>
             <section class="presentation">
