About Page more content

--- a/about.html
+++ b/about.html
@@ -66,11 +66,15 @@
                     </p>
                     <br>
                     <p>
-                        Currently, I'm a student at the University of Virginia studying Computer Science and Entrepreneurship. This summer, I'll be interning at <a href = "https://www.relativity.com/">Relativity</a> in Chicago, Illinois, where I'll be helping the team optimize their backend pipeline and execute their UI redesign plans.
+                        Currently, I'm a student at the <a href = "https://engineering.virginia.edu/departments/computer-science">University of Virginia</a> studying Computer Science and Entrepreneurship. This summer, I'll be interning at <a href = "https://www.relativity.com/">Relativity</a> in Chicago, Illinois, where I'll be helping the team optimize their backend pipeline and execute their UI redesign plans.
                     </p>
                     <br>
                     <p>
-                       Aside from all this, I am heavily invested in playing and watching soccer (grew up watching Manchester United), I love music and indulge heavily on Spotify for new content, and I am an advocate of 
+                       Aside from all this, I live for new experiences in new places, I am heavily invested in playing and watching soccer (grew up watching Manchester United), and I spend an unhealthy amount of time on Spotify curating <a href="https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=-iFxRjdtQW2kaIqIflIdAA">playlists</a>.
+                    </p>
+                    <br>
+                    <p>
+                        If you want to learn more, check out my <a href="David Yoon Resume.pdf"> resume</a>, or feel free to reach out! 
                     </p>
                 </div>
                 <div class = "about-img">
