Editing front page and nav bar styling

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     <body>
         <header>
             <div class="logos">
-                <h4>Work in Progress</h4>
+                <h4>dy.</h4>
             </div>
             <nav>
                 <ul class = "nav-bar">
@@ -59,6 +59,7 @@
         </header>
         <main>
             <section class ="about-presentation">
+                <div class = "about-spacing"></div>
                 <div class = "about-intro">
                     <h1>Hello There 👋</h1>
                     <p>
@@ -76,9 +77,6 @@
                     <p>
                         If you want to learn more, check out my <a href="David Yoon Resume.pdf"> resume</a>, or feel free to reach out! 
                     </p>
-                </div>
-                <div class = "about-img">
-
                 </div>
             </section>
         </main> 
