--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <body>
         <header>
             <div class="logos">
-                <h4>Work in Progress</h4>
+                <h3><a href="index.html">dy.</a></h3>
             </div>
-            <nav>
+            <nav class ="fill">
                 <ul class = "nav-bar">
                     <li><a class = "myLinks" href="index.html">Home</a></li>
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
@@ -59,6 +59,7 @@
         <main>
             <section class="presentation">
                 <div class="intro">
+                    <img class="profile-image big rounded" src="images/davio1.jpg" alt="profile image of Lucy">
                     <h1>Hi, I'm David Yoon.</h1>
                     <p>I love new things and I'm a dreamer.</p>
                     <p>Currently, I am playing with the idea of "programming on the right side of the brain". </p>
