Working on about page

--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
             <nav class ="fill">
                 <ul class = "nav-bar">
                     <li><a class = "myLinks" href="index.html">Home</a></li>
+                    <li><a class = "myLinks" href="about.html">About</a></li>
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
-            <div class = >
-
-            </div>
         </header>
         <main>
             <section class="presentation">
                 <div class="intro">
-                    <img class="profile-image big rounded" src="images/davio1.jpg" alt="profile image of Lucy">
+                    <img class="profile-image big rounded" src="images/davio1.jpg" alt="profile image of David">
                     <h1>
                         <span id="typed"></span>
                         <div id="typed-strings" style="display: none;">
