Working about page

--- a/about.html
+++ b/about.html
@@ -23,29 +23,27 @@
             <nav class ="fill">
                 <ul class = "nav-bar">
                     <li><a class = "myLinks" href="index.html">Home</a></li>
-                    <li><a class = "myLinks" href="about.html">About</a></li>
+                    <li><a class = "myLinks" href="about.html">About Me</a></li>
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
-            <div class = >
-
-            </div>
         </header>
             <section class="introduction-section">
             <div class ="holder">
             </div>
               <div class="container">
-              <h1>Hi there!</h1>
-              <p>I am an inherent problem solver. Although my background is in Computer Science, my curiosity often lets me wander into various domains, which has allowed me to appreciate the value of different experiences,
-                  cultures, and people. I have particularly sharpened my eyes towards design thinking, recommender systems, and engineering ethics over the past few years. 
+              <h1><span class ="highlight">Hi there!</span></h1> <br>
+              <p>My name is David! I am an inherent problem solver. Although my background is in Computer Science, my curiosity often lets me wander into various domains, which has allowed me to appreciate the value of different experiences. 
+                  I have particularly sharpened my eyes towards design thinking, recommender systems, and engineering ethics over the past few years. 
               </p>
-              <p>Currently, I'm a 4th year at the <a href = "https://www.virginia.edu/">University of Virginia</a> studying Computer Science and Entrepreneurship. 
-                In the past, I've interned at <a href ="https://www.relativity.com/">Relativity</a> and <a href ="https://www.alarm.com/">Alarm.com</a>, where I've had opportunities to work with the full stack.
+              <br>
+              <p>Currently, I'm a 4th year at the <span class = "highlight"><a href = "https://www.virginia.edu/" style = "text-decoration: none;">University of Virginia</a></span> studying Computer Science and Entrepreneurship. 
+                In the past, I've interned at <span class = "highlight"><a href ="https://www.relativity.com/" style = "text-decoration: none;">Relativity</a></span> and <span class = "highlight"><a href ="https://www.alarm.com/" style = "text-decoration: none;">Alarm.com</a></span>, where I've had opportunities to work with the full stack.
               </p>
-              
-              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify playlists, and cheering on various soccer teams.</p>
-
-              <p>I'm actively looking for new opportunities in the engineering domain. Feel free to reach out! </p>
+              <br>
+              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ" style = "text-decoration: none;">playlists</a></span>, and cheering on various soccer teams.</p>
+              <br>
+              <p>I'm actively looking for new opportunities in the engineering domain. Feel free to <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank" style = "text-decoration: none;">reach out!</a></span> </p>
               </div>
               
             </section>
