Working about page

--- a/about.html
+++ b/about.html
@@ -45,13 +45,12 @@
               <br>
               <p>I'm actively looking for new opportunities in the engineering domain. Feel free to <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank" style = "text-decoration: none;">reach out!</a></span> </p>
               </div>
-              
             </section>
           
             <footer class="content-footer">
 
               <div class="footer-container">
-                <p>Made by <a href="https://davidjyoon.me">David Yoon</a>. Thanks for visiting!</p>
+                <p>&copy; 2020 <a href="https://davidjyoon.me">David Yoon</a>. Thanks for visiting!</p>
           </div>
             </footer>
     </body>
