--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css"/>
+        <link rel="icon" href="images/davio1.jpg">
         <script src="script.js"></script>
         <title>David Yoon</title>
         <link
@@ -49,6 +50,12 @@
                     </ul>               
                 </div>  
             </section>
+            <footer class="content-footer">
+
+                <div class="footer-container">
+                  <p>&copy; 2020 <a href="https://davidjyoon.me">David Yoon</a>. Thanks for visiting!</p>
+                </div>
+            </footer>
         </main> 
     </body>
 </html>
