--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="about.css"/>
+        <link rel="icon" href="images/davio1.jpg">
         <script src="script.js"></script>
         <title>David Yoon</title>
         <link
@@ -33,17 +34,17 @@
             </div>
               <div class="container">
               <h1><span class ="highlight">Hi there!</span></h1> <br>
-              <p>My name is David! I am an inherent problem solver. Although my background is in Computer Science, my curiosity often lets me wander into various domains, which has allowed me to appreciate the value of different experiences. 
+              <p>My name is <span class = "highlight"><a href = "https://www.linkedin.com/in/david-j-yoon/" target = "_blank">David</a></span>! I am an inherent problem solver. Although my background is in Computer Science, my curiosity often lets me wander into various domains, which has allowed me to appreciate the value of different experiences. 
                   I have particularly sharpened my eyes towards design thinking, recommender systems, and engineering ethics over the past few years. 
               </p>
               <br>
-              <p>Currently, I'm a 4th year at the <span class = "highlight"><a href = "https://www.virginia.edu/" style = "text-decoration: none;">University of Virginia</a></span> studying Computer Science and Entrepreneurship. 
-                In the past, I've interned at <span class = "highlight"><a href ="https://www.relativity.com/" style = "text-decoration: none;">Relativity</a></span> and <span class = "highlight"><a href ="https://www.alarm.com/" style = "text-decoration: none;">Alarm.com</a></span>, where I've had opportunities to work with the full stack.
+              <p>Currently, I'm a 4th year at the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span> studying Computer Science and Entrepreneurship. 
+                In the past, I've interned at <span class = "highlight"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.
               </p>
               <br>
-              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ" style = "text-decoration: none;">playlists</a></span>, and cheering on various soccer teams.</p>
+              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ">playlists</a></span>, and cheering on various soccer teams.</p>
               <br>
-              <p>I'm actively looking for new opportunities in the engineering domain. Feel free to <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank" style = "text-decoration: none;">reach out!</a></span> </p>
+              <p>I'm actively looking for new opportunities in the engineering domain. Feel free to <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank">reach out!</a></span> </p>
               </div>
             </section>
           
