Adding resume link to about page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
               <br>
               <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ">playlists</a></span>, and cheering on various soccer teams.</p>
               <br>
-              <p>I'm actively looking for new opportunities in the engineering domain. Feel free to <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank">reach out!</a></span> </p>
+              <p>I'm actively looking for new opportunities in the engineering domain. If you want to learn more, feel free to check out my <span class = "highlight"><a target = "_blank" href="David Yoon Resume.pdf">resume</a></span> or <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank">reach out!</a></span> </p>
               </div>
             </section>
           
