Adding link to medium account

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css"/>
         <link rel="icon" href="images/davio1.jpg">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <script src="script.js"></script>
         <title>David Yoon</title>
         <link
@@ -46,7 +47,9 @@
                     <ul>
                         <li><a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="https://github.com/davio606" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                        <li><a href="https://medium.com/@davidyoon70" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
                         <li><a href="mailto: djy6cg@virginia.edu" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+
                     </ul>               
                 </div>  
             </section>
@@ -55,7 +58,7 @@
                 <div class="footer-container">
                   <p>&copy; 2020 <a href="https://davidjyoon.me">David Yoon</a>. Thanks for visiting!</p>
                 </div>
-            </footer>
+            </footer>fa 
         </main> 
     </body>
 </html>
