--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
 		                    <p>Student at <span class="highlight pink">UVA</span> </p>
-                            <p>Software <span class="highlight blue">Developer</span> </p>
+                            <p>Software <span class="highlight blue">Engineer</span> </p>
 		                </div>
                       </h1>
-                    <p>I love new things and I'm a dreamer.</p>
+                    <p>I'm a dreamer and I love new things.</p>
                     <p>Currently, I am playing with the idea of "programming on the right side of the brain". </p>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
