--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
 		                    <p>Student at <span class="highlight pink">UVA</span> </p>
-                            <p>Software <span class="highlight blue">Engineer</span> </p>
+                            <p>Software <span class="highlight blue">Developer</span> </p>
 		                </div>
                       </h1>
                     <p>I'm a dreamer and I love new things.</p>
