adding intro and fade animations

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="about.css"/>
         <link rel="icon" href="images/davio1.jpg">
-        <script src="script.js"></script>
+        <script src="about.js"></script>
         <title>David Yoon</title>
         <link
         href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
@@ -19,16 +19,17 @@
     <body>
         <header>
             <div class="logos">
-                <h3><a href="index.html">dy.</a></h3>
+                <h3><a href="home.html">dy.</a></h3>
             </div>
             <nav class ="fill">
                 <ul class = "nav-bar">
-                    <li><a class = "myLinks" href="index.html">Home</a></li>
+                    <li><a class = "myLinks" href="home.html">Home</a></li>
                     <li><a class = "myLinks" href="about.html">About Me</a></li>
                     <li><a class = "myLinks" target = "_blank" href="David Yoon Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
+            <script src="about.js"></script>
             <section class="introduction-section">
             <div class ="holder">
             </div>
