--- a/about.html
+++ b/about.html
@@ -39,11 +39,11 @@
                   I have particularly sharpened my eyes towards design thinking, recommender systems, and engineering ethics over the past few years. 
               </p>
               <br>
-              <p>Currently, I'm a 4th year at the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span> studying Computer Science and Entrepreneurship. 
+              <p>I'm a recent graduate from the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span> and I'll be working at <span class = "highlight"><a href ="https://www.appian.com/">Appian</a></span> as a Software Engineer in March. 
                 In the past, I've interned at <span class = "highlight"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.
               </p>
               <br>
-              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ">playlists</a></span>, and cheering on various soccer teams.</p>
+              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ">playlists</a></span>, and cheering on Tottenham Hotspur.</p>
               <br>
               <p>I'm actively looking for new opportunities in the engineering domain. If you want to learn more, feel free to check out my <span class = "highlight"><a target = "_blank" href="David Yoon Resume.pdf">resume</a></span> or <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank">reach out!</a></span> </p>
               </div>
