--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 In the past, I've interned at <span class = "highlight"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.
               </p>
               <br>
-              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ">playlists</a></span>, and cheering on Tottenham Hotspur.</p>
+              <p>When I'm not coding, you can find me training for a marathon, curating my Spotify <span class = "highlight"><a href = "https://open.spotify.com/user/22yrmdeyt64fpwnaef2dyizcy?si=apahZWoURnSGao8aBIaYMQ">playlists</a></span>, and cheering on <span class = "highlight"><a href = "https://www.tottenhamhotspur.com/">Tottenham Hotspur</a></span>.</p>
               <br>
               <p>I'm actively looking for new opportunities in the engineering domain. If you want to learn more, feel free to check out my <span class = "highlight"><a target = "_blank" href="David Yoon Resume.pdf">resume</a></span> or <span class = "highlight"><a href ="mailto: djy6cg@virginia.edu" target="_blank">reach out!</a></span> </p>
               </div>
