--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
 		                    <p>Student at <span class="highlight pink">UVA</span> </p>
-                            <p>Software <span class="highlight blue">Developer</span> </p>
+                            <p>SWE @ <span class="highlight blue">Appian</span> </p>
 		                </div>
                       </h1>
                     <p>I'm a dreamer and I love new things.</p>
