--- a/home.html
+++ b/home.html
@@ -39,8 +39,8 @@
                         <span id="typed"></span>
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
-		                    <p>Student at <span class="highlight pink">UVA</span> </p>
-                            <p>SWE @ <span class="highlight blue">Appian</span> </p>
+		                    <p>Student @ <span class="highlight pink">UVA</span> </p>
+                            <p>Developing @ <span class="highlight blue">Appian</span> </p>
 		                </div>
                       </h1>
                     <p>I'm a dreamer and I love new things.</p>
