--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
 		                    <p>Student @ <span class="highlight pink">UVA</span> </p>
-                            <p>Developing @ <span class="highlight appian">Appian</span> </p>
+                            <p>Developer @ <span class="highlight appian">Appian</span> </p>
 		                </div>
                       </h1>
                     <p>I'm a dreamer and I love new things.</p>
