--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                         <span id="typed"></span>
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
-		                    <p>Student @ <span class="highlight pink">UVA</span> </p>
+		                    <p>Formerly @ <span class="highlight pink">UVA</span> </p>
                             <p>Developer @ <span class="highlight appian">Appian</span> </p>
 		                </div>
                       </h1>
