--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                         <span id="typed"></span>
                         <div id="typed-strings" style="display: none;">
 		                    <p>Hi I'm <span class="highlight blue">David Yoon</span></p>
-		                    <p>Student at <span class="highlight pink">UVA</span> </p>
-                            <p>Software <span class="highlight blue">Developer</span> </p>
+		                    <p>Previously @ <span class="highlight pink">UVA</span> </p>
+                            	    <p>Developer @ <span class="highlight appian">Appian</span> </p>
 		                </div>
                       </h1>
                     <p class = "fade-in">I'm a dreamer and I love new things.</p>
-                    <p>Currently, I am playing with the idea of "programming on the right side of the brain". </p>
+                    <p>Currently, I am exploring machine learning land and developing on the full stack". </p>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="https://github.com/davio606" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
