--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		                </div>
                       </h1>
                     <p class = "fade-in">I'm a dreamer and I love new things.</p>
-                    <p>Currently, I am exploring machine learning land and developing on the full stack". </p>
+                    <p>Currently, I am exploring machine learning land and developing on the full stack. </p>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/david-j-yoon/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="https://github.com/davio606" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
