--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                   I have particularly sharpened my eyes towards design thinking, recommender systems, and engineering ethics over the past few years. 
               </p>
               <br>
-              <p>I'm a recent graduate from the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span> and I'll be working at <span class = "highlight"><a href ="https://www.appian.com/">Appian</a></span> as a Software Engineer in March. 
+              <p>I'm a recent graduate from the <span class = "highlight"><a href = "https://www.virginia.edu/">University of Virginia</a></span> currently working at <span class = "highlight"><a href ="https://www.appian.com/">Appian</a></span> as a Software Engineer. 
                 In the past, I've interned at <span class = "highlight"><a href ="https://www.relativity.com/">Relativity</a></span> and <span class = "highlight"><a href ="https://www.alarm.com/">Alarm.com</a></span>, where I've had opportunities to work with the full stack.
               </p>
               <br>
